# kontrol

./: .gitignore  .yamlfmt.yaml  Makefile  PKGBUILD  TODO.md  kscreen-toggle-laptop.sh  pyproject.toml  qkb-audio.py  rpm-draft.md
.github/workflows/: makefile.yml  pacman.yml
configs/: global-shortcuts.kksrc  rekonfigista.sh
configs/konsole/: konsole.shortcuts
configs/konsole/local-share-konsole/: default.keytab  kevwargo-light.profile
configs/local-share/konsole/: BlackOnLightYellow.colorscheme  kevwargo.profile
configs/local-share/konsole/shortcuts/: Default
configs/usr-share/X11/xkb/symbols/: fi
docker/: Dockerfile.rpm  compose.yaml
kombi/: kombi.py
konsctl/: konsctl.py
kwinctl/: .dir-locals.el  TODO.md  commands.yaml  kwinctl.js  kwinctl.py  kwinctl.service  kwinjs-inspect.py  overrides.yaml  rules.yaml
pacman/: PKGBUILD
qkbdialog/: TODO.md  audio.py  vox.py
rpm/: .gitignore  DRAFT.md
rpm/SPEC/: kontrol.spec
scripts/: gen-env-mk.py
src/kontrol/: kbrite.py  kombi.py  konsctl.py  kscreen_toggle.py
src/kontrol/cli/: kombi.py  kscreen_toggle.py
src/kontrol/cli/kwinctl/: kwinjs_eval.py  main.py  rules.yaml
src/kontrol/gui/: kbrite.py  qkvox.py  quick_wg.py  qwg.py
src/kontrol/kwinctl/: .dir-locals.el  cli.py  commands.yaml  kwinctl.js  kwinctl.service  rules.yaml
src/kontrol/qkvox/: TODO.md  vox.py
src/kontrol/utils/: asynch.py  dbus.py  kbd.py  nm.py
src/kontrol/utils/qt/: dialog.py  signals.py
