[project]
name = "kontrol"
version = "0.5.9"
description = "A set of tools to configure Plasma 6 (Wayland) in a predictable way"
requires-python = ">=3.13"
dependencies = [
    "dbus-next>=0.2.3",
    "pyqt6>=6.11.0",
    "pyyaml>=6.0.3",
    "qasync>=0.28.0",
]

[project.scripts]
kombi = "kontrol.kombi:main"
konsctl = "kontrol.konsctl:main"
kwinctl = "kontrol.kwinctl.cli:main"
kwinjs = "kontrol.kwinctl.kwinjs_eval:main"
kscreen-toggle = "kontrol.kscreen_toggle:main"
qkvox = "kontrol.qkvox.vox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kontrol"]

[tool.black]
line-length=99
