[project]
name = "kontrol"
version = "0.7.1"
description = "A set of tools to configure Plasma 6 (Wayland) in a predictable way"
requires-python = ">=3.13"
dependencies = [
    "dbus-next>=0.2.3",
    "pyqt6>=6.11.0",
    "pyyaml>=6.0.3",
    "qasync>=0.28.0",
]

[project.scripts]
kombi          = "kontrol.cli.kombi:main"
konsctl        = "kontrol.cli.konsctl:main"
kwinctl        = "kontrol.cli.kwinctl.main:main"
kwinjs         = "kontrol.cli.kwinctl.kwinjs_eval:main"
kscreen-toggle = "kontrol.cli.kscreen_toggle:main"
kbrite         = "kontrol.gui.kbrite:main"
qkvox          = "kontrol.gui.qkvox:main"
quick-wg       = "kontrol.gui.quick_wg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kontrol"]

[tool.black]
line-length=99

[dependency-groups]
dev = [
    "ipython>=9.15.0",
]
